2008-02-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: now put libxf86vm in a separate variable and no more use
	  it to compile plugins (only core need it).
	* src/gcompris/Makefile.am: -
	* boards/voices/nn: created a link to nb voices until we get a voice set.

2008-02-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Windows issue. Translation was broken in all python modules.
	Now use the gcompris gettext instead of the python one.

	* README.mingw:
	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/class_list.py:
	* src/boards/python/admin/group_edit.py:
	* src/boards/python/admin/group_list.py:
	* src/boards/python/admin/group_user_list.py:
	* src/boards/python/admin/log_list.py:
	* src/boards/python/admin/module.py:
	* src/boards/python/admin/module_boards.py:
	* src/boards/python/admin/module_groups.py:
	* src/boards/python/admin/module_profiles.py:
	* src/boards/python/admin/module_reports.py:
	* src/boards/python/admin/module_users.py:
	* src/boards/python/admin/profile_edit.py:
	* src/boards/python/admin/profile_group_list.py:
	* src/boards/python/admin/profile_list.py:
	* src/boards/python/admin/user_edit.py:
	* src/boards/python/admin/user_list.py:
	* src/boards/python/admin/wordlist.py:
	* src/boards/python/administration.py:
	* src/boards/python/anim.py:
	* src/boards/python/ballcatch.py:
	* src/boards/python/chat.py:
	* src/boards/python/connect4.py:
	* src/boards/python/followline.py:
	* src/boards/python/gnumch.py:
	* src/boards/python/login.py:
	* src/boards/python/redraw.py:
	* src/boards/python/searace.py:
	* src/boards/python/sudoku.py:
	* src/boards/python/tuxpaint.py:
	* src/boards/python/writing_tutor_image_match.py:
	* src/boards/python/writing_tutor_missing_match.py:
	* src/boards/python/writing_tutor_pattern_admin.py:
	* src/boards/python/writing_tutor_template_match.py:

	*** RELEASE 8.4.4 ***

2008-02-13  Bruno coudoin  <bruno.coudoin@free.fr>
